--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "vanilla-app-template",
+  "name": "tetiana",
+  "homepage": "https://tanyf5.github.io/tetiana/",
   "private": true,
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --base=/vanilla-app-template/",
+    "build": "vite build --base=/tetiana/",
     "preview": "vite preview"
   },
   "devDependencies": {
@@ -14,9 +15,10 @@
     "postcss-sort-media-queries": "^5.2.0",
     "vite": "^5.4.6"
   },
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "Tetiana Bachariewa <tetianabachariewa@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "vanilla-tilt": "^1.8.1",
     "vite-plugin-full-reload": "^1.2.0",
     "vite-plugin-html-inject": "^1.1.2"
   }
